# drf

./: .gitignore  pyproject.toml
drfsite/drfsite/: settings.py  urls.py
drfsite/restaurants/: admin.py  models.py  serializer.py  views.py
drfsite/restaurants/migrations/: 0001_initial.py  0002_restaurants_user.py
